--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Nicole H.#9269",
+  "license": "CUSTOM",
   "dependencies": {
     "ascii-table": "0.0.9",
     "chalk": "^4.1.2",
@@ -15,8 +15,10 @@
     "discord-buttons": "^4.0.0",
     "discord.js": "^12.5.1",
     "fs": "0.0.1-security",
+    "has-flag": "^5.0.1",
     "moment": "^2.29.1",
     "ms": "^2.1.3",
-    "quick.db": "^7.1.3"
+    "quick.db": "^7.1.3",
+    "uninstall": "0.0.0"
   }
 }
